# jarouna_qualifyze_case_study

./: .gitignore  .pre-commit-config.yaml  .sqlfluffignore  Readme.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml  saved_query_helper.sh
db-data/: .gitignore
macros/: dev_limit.sql
models/bigtables/: _bigtables__docs.md  _bigtables__models.yml  organizations_bigtable.sql
models/marts/: _qualifyze_app__models.yml  dim_organizations.sql  fact_audit_requests.sql  fact_credit_packages.sql
models/semantic_layer/metrics/: audit_requests.yml  credit_packages.yml
models/semantic_layer/saved_queries/: organizations_kpis.yml  organizations_kpis_all_time.sql
models/semantic_layer/semantic_models/: audit_requests.yml  credit_packages.yml  organizations.yml
models/staging/qualifyze_app/: _qualifyze_app__docs.md  _qualifyze_app__models.yml  stg_app__audit_requests.sql  stg_app__credit_packages.sql  stg_app__organizations.sql
models/utilities/: _utils__models.yml  metricflow_time_spine.sql
seeds/: seed__credit_packages.csv  seed__requests.csv
tests/: assert_at_least_one_org_switched_to_subscription_model.sql  assert_at_least_one_org_with_fully_used_credit_packages.sql  assert_little_org_with_expired_partially_used_credit_packages.sql
