[tool.poetry]
name = "qualifyze-case-study"
version = "0.1.0"
description = ""
authors = ["dalmache <warnek94@gmail.com>"]
readme = "README.md"
packages = [{include = "qualifyze_case_study"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dbt-core = "^1.7.9"
dbt-postgres = "^1.7.9"
dbt-metricflow = "^0.6.0"


[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.3.5"
sqlfluff-templater-dbt = "^2.3.5"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
dialect = "postgres"
templater = "dbt"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
exclude_rules = "ST06"
max_line_length = 130

[tool.sqlfluff.templater.dbt]
project_dir = "."
profiles_dir = "."
profile = "qualifyze"
target = "dev"

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules.capitalisation.keywords]
# Keywords
capitalisation_policy = "upper"
